Semester work and dienorastis.tex updates

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -92,24 +92,39 @@
   howpublished = {<\url{https://home.cern/about/experiments}> [žiūr. 2018-05-15]}
 }
 
-@misc{CMSdetector,
+@misc{aboutCMS,
   title = {{CMS}},
   howpublished = {<\url{https://home.cern/about/experiments/cms}> [žiūr. 2018-05-15]}
 }
 
+@misc{CMSdetector,
+  title = {{Detector}},
+  howpublished = {<\url{https://cms.cern/detector}> [žiūr. 2018-12-21]}
+}
+
+@misc{accelerators,
+  title = {{Accelerators}},
+  howpublished = {<\url{https://home.cern/science/accelerators}> [žiūr. 2018-12-21]}
+}
+
 @misc{Ecal,
-  title = {{Electromagnetic Calorimeter}},
-  howpublished = {<\url{http://cms.web.cern.ch/news/electromagnetic-calorimeter}> [žiūr. 2018-05-15]}
+  title = {{Energy of Electrons and Photons (ECAL)}},
+  howpublished = {<\url{http://cms.cern/detector/measuring-energy/energy-electrons-and-photons-ecal}> [žiūr. 2018-12-21]}
 }
 
 @misc{Hcal,
-  title = {{Hadronic Calorimeter}},
-  howpublished = {<\url{http://cms.web.cern.ch/news/hadron-calorimeter}> [žiūr. 2018-05-15]}
+  title = {{Energy of Hadrons (HCAL)}},
+  howpublished = {<\url{https://cms.cern/detector/measuring-energy/energy-hadrons-hcal}> [žiūr. 2018-05-15]}
 }
 
 @misc{Solenoid,
-  title = {{Superconducting Magnet}},
-  howpublished = {<\url{http://cms.web.cern.ch/news/superconducting-magnet}> [žiūr. 2018-05-15]}
+  title = {{Bending Particles}},
+  howpublished = {<\url{http://cms.cern/detector/bending-particles}> [žiūr. 2018-12-21]}
+}
+
+@misc{MuonChambers,
+  title = {{Detecting muons}},
+  howpublished = {<\url{http://cms.cern/detector/detecting-muons}> [žiūr. 2018-12-21]}
 }
 
 @unpublished{ANote,
